correct index.html, add style.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,32 +7,26 @@ ul {
 }
 
 body {
-    color: var(--navyblue, #2E2F42);
-    font-family: Roboto;
+    font-family: 'Roboto',sans-serif;
     font-size: 16px;
     font-weight: 400;
     background: var(--white, #FFF);
-}
+    color: var(--navyblue, #2E2F42);
+}  
 
-/* Header */
+/*Start Header */
 
 .header-logo {
     color: var(--iris, #4D5AE5);
     font-family: Raleway;
     font-size: 18px;
     font-weight: 700;
-    line-height: 21px;
-    letter-spacing: 0.54px;
+    line-height: 1.16;
+    letter-spacing: 0.03em;
     text-transform: uppercase;
 }
 .header-logo-accent {
-color: var(--navyblue, #2E2F42);
-    font-family: Raleway;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 21px;
-    letter-spacing: 0.54px;
-    text-transform: uppercase;
+    color: var(--navyblue, #2E2F42);
 }
 .header-logo-accent:hover,
 .header-logo-accent:focus {
@@ -43,40 +37,148 @@ color: var(--navyblue, #2E2F42);
     font-family: Roboto;
     font-size: 16px;
     font-weight: 500;
-    line-height: 24px;
-    letter-spacing: 0.32px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
 }
-.header-link:hover,
-.header-link:focus {
+.header-link:hover {
     color: var(--ocean, #404BBF);
-    font-family: Roboto;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 24px;
-    letter-spacing: 0.32px;
+    font-family: inherit;
 }
+
 .address {
+    font-family: inherit;
     color: var(--slate, #434455);
-    font-family: Roboto;
-     font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px;
-    letter-spacing: 0.32px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
 }
 .address:hover,
 .address:focus {
-    color: var(--ocean, #404BBF); 
-    font-family: Roboto;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px;
-    letter-spacing: 0.32px;
-} 
+    color: var(--ocean, #404BBF);
+
+}
 /* End header */
 
 /* Main */
 
+/* Start hero section */
+.hero-section {
+    background: var(--navyblue, #2E2F42);
+}
+.hero-title {
+    color: var(--white, #FFF);
+    text-align: center;
+    font-size: 56px;
+    font-weight: 700;
+    line-height: 1.07;
+    letter-spacing: 0.02em;
+}
+.button{
+    cursor: pointer;
+    background: var(--iris, #4D5AE5);
+    padding: 16px 32px;
+    border-radius: 4px;
+    color: var(--white, #FFF);
+    font-family: inherit;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+}
+.button:hover {
+    background: var(--ocean, #404BBF);
+}
 
+/* End Hero section */
 
+/* Start Advantage section */
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+.advantage-title { 
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+}
+.advantage-text {
+    color: var(--slate, #434455);
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+/* End Advantage section */
+
+/* Start Our team section */
+.our-team-section {
+    background: var(--cloud, #F4F4FD);
+}
+.our-team-title {
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+}
+.our-team-subhead {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+}
+.our-team-text {
+    color: var(--slate, #434455);
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+/* End Our team section */
+
+/* Start Our Portfolio section */
+.our-portfolio-title {
+        font-size: 36px;
+        font-weight: 700;
+        line-height: 1.11;
+        letter-spacing: 0.02em;
+        text-transform: capitalize;
+}
+.our-portfolio-subhead {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+}
+.our-portfolio-text {
+    color: var(--slate, #434455);
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+/* End Our Portfolio section */
+
+/* Start Footer */
+.footer {
+    background: var(--navyblue, #2E2F42);
+}
+.footer-logo {
+    color: var(--iris, #4D5AE5);
+    font-family: Raleway;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1.16;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+}
+.footer-logo-accent {
+color: var(--cloud, #F4F4FD);
+    
+}
+.footer-text {
+    color: var(--cloud, #F4F4FD);
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
