--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,7 @@ body {
 }
 
 .address {
+    font-style: normal;
     font-family: inherit;
     color: var(--slate, #434455);
     line-height: 1.5;
